# CppDesignPatterns

./: CMakeLists.txt  main.cpp
AbstractFactory/: AbstractFactory.vsdx  AccessRoom.cpp  AccessRoom.h  AccessUser.cpp  AccessUser.h  DataFactory.cpp  DataFactory.h  RedisRoom.cpp  RedisRoom.h  RedisUser.cpp  RedisUser.h  RoomInterface.cpp  RoomInterface.h  UserInterface.cpp  UserInterface.h
Builder/: Builder.vsdx  FatPersonBuilder.cpp  FatPersonBuilder.h  PersonBuilder.cpp  PersonBuilder.h  PersonDirector.cpp  PersonDirector.h  ThinPersonBuilder.cpp  ThinPersonBuilder.h
Decorator/: Captain.cpp  Captain.h  Decorator.vsdx  DiveDecorator.cpp  DiveDecorator.h  FlyDecorator.cpp  FlyDecorator.h  Hero.cpp  Hero.h  LandDecorator.cpp  LandDecorator.h  LaserDecorator.cpp  LaserDecorator.h  SkillDecorator.cpp  SkillDecorator.h  SuperMan.cpp  SuperMan.h
FactoryMethod/: Animal.cpp  Animal.h  AnimalFactory.cpp  AnimalFactory.h  Cut.cpp  Cut.h  CutFactory.cpp  CutFactory.h  Dog.cpp  Dog.h  DogFactory.cpp  DogFactory.h  FactoryMethod.vsdx
Observer/: Employee.cpp  Employee.h  Observer.cpp  Observer.h  Observer.vsdx  Reception.cpp  Reception.h  Subject.cpp  Subject.h
Prototype/: Prototype.vsdx  Record.cpp  Record.h  Resume.cpp  Resume.h
Proxy/: DownloadInterface.cpp  DownloadInterface.h  DownloadProxy.cpp  DownloadProxy.h  DownloadReal.cpp  DownloadReal.h  Proxy.vsdx
SimpleFactory/: BentleyCar.cpp  BentleyCar.h  Car.cpp  Car.h  CarFactory.cpp  CarFactory.h  FerrariCar.cpp  FerrariCar.h  PorscheCar.cpp  PorscheCar.h  SimpleFactory.vsdx
Strategy/: AddStrategy.cpp  AddStrategy.h  DivStrategy.cpp  DivStrategy.h  MulStrategy.cpp  MulStrategy.h  OperateContext.cpp  OperateContext.h  OperateStrategy.cpp  OperateStrategy.h  Strategy.vsdx  SubStrategy.cpp  SubStrategy.h
TemplateMethod/: PoorPerson.cpp  PoorPerson.h  Problem.cpp  Problem.h  RichPerson.cpp  RichPerson.h  TemplateMethod.vsdx
